[project]
name = "myapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.135.1",
    "google-genai==1.12.1",
    "pydantic-settings>=2.13.1",
    "python-dotenv==1.1.0",
    "pyyaml>=6.0.3",
    "slowapi>=0.1.9",
]

[dependency-groups]
dev = [
    "anyio>=4.12.1",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
]

[tool.fastapi]
entrypoint = "app.main:app"
