[project]
name = "myapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.11"
dependencies = [
    "fastapi[standard]>=0.135.1,<0.136.0",
    "google-genai==1.12.1",
    "pydantic-settings>=2.13.1",
    "pyyaml>=6.0.3",
    "slowapi>=0.1.9",
    "python-dotenv==1.1.0",
    "pulumi>=3.228.0",
    "pulumi-gcp>=9.16.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff",
]


[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 88

[tool.fastapi]
entrypoint = "app.main:app"
