[project]
name = "myapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.11"
dependencies = [
    "fastapi[standard]>=0.135.1,<0.136.0",
    "google-genai==1.12.1",
    "pydantic-settings>=2.13.1",
    "pyyaml>=6.0.3",
    "slowapi>=0.1.9",
    "python-dotenv==1.1.0",
    "pulumi>=3.228.0",
    "pulumi-gcp>=9.16.0",
    "asgi-lifespan==2.*",
    "psycopg[binary]>=3.3.4",
    "sqlalchemy>=2.0.50",
    "alembic>=1.18.4",
    "aiosqlite>=0.22.1",
]

[dependency-groups]
dev = [
    "httpx",
    "mypy",
    "paracelsus",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-pretty",
    "uv",
    "ruff",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.ruff]
line-length = 88

[tool.fastapi]
entrypoint = "app.main:app"
